fix(community): the egress path was silently leaving the fast seam on every frame
Review blocker, and it is worse than a contract deviation. TransportStream documents both directions
as operating on a LoanedBuffer's segment; this binding used MemorySegment.ofArray. Nothing failed,
which is the problem: NativeTcpStreamPlainSocketIo hands the segment to a POSIX send() downcall built
WITHOUT Linker.Option.critical, that rejects a heap segment, and the rejection is swallowed by a
catch (Throwable) that falls back to NIO. So every WebSocket frame threw an exception, had it caught,
and took the slow path off the seam the transport exists to provide.

Measured rather than reasoned about, in both directions. Instrumenting that catch and running the
TCK BEFORE the fix: seam selected on 13 connections and one
"IllegalArgumentException: Heap segment not allowed" per write, at 129 bytes for the handshake
response and 3-4 bytes for the frames. AFTER: zero fallbacks. The probe was reverted and the tree
confirmed clean of it.

Egress and the frame stream now hold one LoanedBuffer each for the life of the connection, grown when
a frame does not fit, rather than one allocation per frame -- a duplex connection sends many small
messages over a long life, and reuse is safe because every write already holds the egress lock. The
handshake read and its response are scoped allocations, since they happen once. A CAS guards the
release: a handler that closes the exchange itself and then falls out of the engine's
try-with-resources reaches it twice, and a second LoanedBuffer.close() is a double-free, not a no-op.

THE CI FAILURE WAS A RACE, NOT A FLAKE. sendAfterCloseThrows passed locally every time and failed
once in CI. The echoed close frame went out BEFORE the connection stopped being writable, so a peer
could observe the close, call send() and get no throw; a loaded runner opens that window and a fast
machine hides it. The echo now leaves after the state flips, which meant moving it out 